fixed path to resume file from projects.html

--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
                         <a href="contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="../Assets/Files/Resume.pdf" target="_blank">Resume</a>
+                        <a href="Assets/Files/Resume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
