changed path locations to fix mobile toggle button and about picture

--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
                     <hr>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="../Assets/Images/About/Sam Profile Picture.jpg" alt="">
+                    <img class="img-responsive img-border-left" src="Assets/Images/About/Sam Profile Picture.jpg" alt="">
                 </div>
 
                 <p>Hi, I'm Sam! Thanks for checking out my portfolio.</p>
