removed project folder and updated path names

--- a/average-face.html
+++ b/average-face.html
@@ -9,13 +9,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Red Knight - Sam Sherrod</title>
+    <title>Average Face Filter - Sam Sherrod</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../css/business-casual.css" rel="stylesheet">
+    <link href="css/business-casual.css" rel="stylesheet">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
@@ -47,25 +47,25 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="../index.html">Sam Sherrod</a>
+                <a class="navbar-brand" href="index.html">Sam Sherrod</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="../index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="../about.html">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="../projects.html">Projects</a>
+                        <a href="projects.html">Projects</a>
                     </li>
                     <li>
-                        <a href="../contact.html">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="../Assets/Files/Resume.pdf" target="_blank">Resume</a>
+                        <a href="Assets/Files/Resume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -81,46 +81,37 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
-                        <strong>Red Knight</strong> - 2D Action Platformer
+                        <strong>Average Face Filter</strong> - Image Processing Tool
                     </h2>
                     <hr>
                     <p class="intro-text text-center">
-                        In Development - Expected Release March 2023<br />
-                        Student Group Games Development Project<br />
-                        <strong>Role: </strong> Lead Developer
+                        Released March 2022</br />
+                        Student Solo Graphics Programming Project<br />
+                        <strong>Role: </strong> Solo Developer
                     </p> 
-                    <a href="../Assets/Images/Projects/Red Knight/red-knight-prototype-img.png">
-                        <img class="img-responsive img-border img-left" src="../Assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
+
+                    <a href="Assets/Images/Projects/Average Face Filter/AverageFaceDefault.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Average Face Filter/AverageFaceDefault.png" alt="">
+                    </a>
+                    <a href="Assets/Images/Projects/Average Face Filter/AverageFace50.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Average Face Filter/AverageFace50.png" alt="">
+                    </a>
+                    <a href="Assets/Images/Projects/Average Face Filter/AverageFace75.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Average Face Filter/AverageFace75.png" alt="">
+                    </a>
+                    <a href="Assets/Images/Projects/Average Face Filter/AverageFace100.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Average Face Filter/AverageFace100.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
 
-                    <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
-                        It is currently in development being built by myself and 3 other students with the Unity game engine.
-                         It is inspired by games such as Megaman and Enter the Gungeon. A unique aspect of the it is that it 
-                         is both a 2D action platformer and a top down action game similar to Zelda II: The Adventure of Link.
-                    </p>
-                    <p>This is a group project made for University of London's Game Development class. The game will be finished 
-                         and playable on WebGL in March 2023.</p>
-                    <p>I have more experience with Unity than the rest of my team, and my role in the development phase has mainly
-                        been to support the team. This has included:
-                        <ul>
-                            <li>building persisting scripts including a game manager, an input manager, and a UI manager</li>
-                            <li>creating a tilemap system with rule tiles for teammates to quickly prototype new levels in
-                                a flexible way</li>
-                            <li>designing game mechanics</li>
-                            <li>setting up the controls using Unity's new Input System</li>
-                            <li>setting up animation state machine</li>
-                            <li>creating our GitHub repository</li>
-                            <li>managing all of our files including our GDD, references, weekly tasks lists, features and more on
-                                 our Google Drive.</li>
-                        </ul>
-                    </p>
+                    <p> This is an image processing tool that allows you to blend multiple photos of faces together. Adjust the slider to see.</p>
+                    <p>This is a tool I made for a graphics programming course at the University of London using p5.js from scratch.</p>
 
-                    <a href="https://samsherrod.itch.io/red-knight" target="_blank" class="btn btn-default btn-lg">Play Game</a>
-                    <a href="https://github.com/samsherrod/red-knight-V2" target="_blank" class="btn btn-default btn-lg">View Source Code</a>
+                    <a href="https://samsherrod.itch.io/average-face-filter" target="_blank" class="btn btn-default btn-lg">Try Tool</a>
                     
-                    <p>Keep in mind that this project is in development, and this is not a reflection of the final or completed project.</p>
+                    <p><strong>Note:</strong> For this particular university project, I am unable to show my code to the public due to plagiarism
+                        concerns. If you would like to see the code for this, please <a href="contact.html"><strong>contact</strong></a> me.</p>
                 </div>
             </div>
         </div>
