--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <hr class="visible-xs">
                     <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
                         It is currently in development being built by myself and 3 other students with the Unity game engine.</p>
-                    <a href="projects/red-knight.html" class="btn btn-default btn-lg">Learn More</a>
+                    <a href="red-knight.html" class="btn btn-default btn-lg">Learn More</a>
                     <a href="https://samsherrod.itch.io/red-knight" target="_blank" class="btn btn-default btn-lg">Play Game</a>
                 </div>
                  <div class="col-lg-12">
@@ -150,7 +150,7 @@
                     <hr class="visible-xs">
                     <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.</p>
                     <p><strong>Note:</strong> It is not available for public viewing yet.</p>
-                    <a href="projects/star-hunter.html" class="btn btn-default btn-lg">Learn More</a>
+                    <a href="star-hunter.html" class="btn btn-default btn-lg">Learn More</a>
                 </div>
             </div>
         </div>
