--- a/instagram-filter.html
+++ b/instagram-filter.html
@@ -47,25 +47,25 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="../index.html">Sam Sherrod</a>
+                <a class="navbar-brand" href="index.html">Sam Sherrod</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="../index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="../about.html">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="../projects.html">Projects</a>
+                        <a href="projects.html">Projects</a>
                     </li>
                     <li>
-                        <a href="../contact.html">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="../Assets/Files/Resume.pdf" target="_blank">Resume</a>
+                        <a href="Assets/Files/Resume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -90,23 +90,23 @@
                         <strong>Role: </strong> Solo Developer
                     </p> 
 
-                    <a href="../Assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png">
-                        <img class="img-responsive img-border img-left" src="../Assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
+                    <a href="Assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
                     </a>
-                    <a href="../Assets/Images/Projects/Instagram Filter/Instagram Filter - Gray.png">
-                        <img class="img-responsive img-border img-left" src="../Assets/Images/Projects/Instagram Filter/Instagram Filter - Gray.png" alt="">
+                    <a href="Assets/Images/Projects/Instagram Filter/Instagram Filter - Gray.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - Gray.png" alt="">
                     </a>
-                    <a href="../Assets/Images/Projects/Instagram Filter/Instagram Filter - EdgeColor.png">
-                        <img class="img-responsive img-border img-left" src="../Assets/Images/Projects/Instagram Filter/Instagram Filter - EdgeColor.png" alt="">
+                    <a href="Assets/Images/Projects/Instagram Filter/Instagram Filter - EdgeColor.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - EdgeColor.png" alt="">
                     </a>
-                    <a href="../Assets/Images/Projects/Instagram Filter/Instagram Filter - Inverse.png">
-                        <img class="img-responsive img-border img-left" src="../Assets/Images/Projects/Instagram Filter/Instagram Filter - Inverse.png" alt="">
+                    <a href="Assets/Images/Projects/Instagram Filter/Instagram Filter - Inverse.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - Inverse.png" alt="">
                     </a>
-                    <a href="../Assets/Images/Projects/Instagram Filter/Instagram Filter - ThresholdMedium.png">
-                        <img class="img-responsive img-border img-left" src="../Assets/Images/Projects/Instagram Filter/Instagram Filter - ThresholdMedium.png" alt="">
+                    <a href="Assets/Images/Projects/Instagram Filter/Instagram Filter - ThresholdMedium.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - ThresholdMedium.png" alt="">
                     </a>
-                    <a href="../Assets/Images/Projects/Instagram Filter/Instagram Filter - Custom.png">
-                        <img class="img-responsive img-border img-left" src="../Assets/Images/Projects/Instagram Filter/Instagram Filter - Custom.png" alt="">
+                    <a href="Assets/Images/Projects/Instagram Filter/Instagram Filter - Custom.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - Custom.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
@@ -134,7 +134,7 @@
                     <a href="https://samsherrod.itch.io/instagram-filter" target="_blank" class="btn btn-default btn-lg">Try Tool</a>
 
                     <p><strong>Note:</strong> For this particular university project, I am unable to show my code to the public due to plagiarism
-                        concerns. If you would like to see the code for this, please <a href="../contact.html"><strong>contact</strong></a> me.</p>
+                        concerns. If you would like to see the code for this, please <a href="contact.html"><strong>contact</strong></a> me.</p>
                 </div>
             </div>
         </div>
