--- a/projects.html
+++ b/projects.html
@@ -82,14 +82,14 @@
                     <hr>
                     <h2 class="intro-text text-center"> <strong>Red Knight</strong> 2D Action Platformer - Student Project</h2>
                     <hr>
-                    <a href="projects/red-knight.html">
+                    <a href="red-knight.html">
                         <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>In Development - Expected Release March 2023</p>
                     <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
                         It is currently in development being built by myself and 3 other students with the Unity game engine.</p>
-                    <a href="projects/red-knight.html" class="btn btn-default btn-lg">Read More</a>
+                    <a href="red-knight.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
@@ -100,13 +100,13 @@
                     <hr>
                     <h2 class="intro-text text-center"> <strong>Star Hunter</strong> Bow and Arrow VR Project - Student Project</h2>
                     <hr>
-                    <a href="projects/star-hunter.html">
+                    <a href="star-hunter.html">
                         <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/star-hunter-prototype-img.jpg" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>In Development - Expected Release March 2023</p>
                     <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.</p>
-                    <a href="projects/star-hunter.html" class="btn btn-default btn-lg">Read More</a>
+                    <a href="star-hunter.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
@@ -117,13 +117,13 @@
                     <hr>
                     <h2 class="intro-text text-center"> <strong>Instagram Filter</strong> - Student Project</h2>
                     <hr>
-                    <a href="projects/instagram-filter.html">
+                    <a href="instagram-filter.html">
                         <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Instagram Filter/Instagram Filter - SepiaBlur.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released March 2022</p>
                     <p>An image processing tool that allows a user to apply 10 different filters as well as other tools to an image</p>
-                    <a href="projects/instagram-filter.html" class="btn btn-default btn-lg">Read More</a>
+                    <a href="instagram-filter.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
@@ -134,13 +134,13 @@
                     <hr>
                     <h2 class="intro-text text-center"> <strong>Average Face Filter</strong> - Student Project</h2>
                     <hr>
-                    <a href="projects/average-face.html">
+                    <a href="average-face.html">
                         <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Average Face Filter/AverageFaceDefault.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released March 2022</p>
                     <p>An image processing tool that allows a user to blend multiple faces together</p>
-                    <a href="projects/average-face.html" class="btn btn-default btn-lg">Read More</a>
+                    <a href="average-face.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
@@ -151,13 +151,13 @@
                     <hr>
                     <h2 class="intro-text text-center"> <strong>2D Platformer</strong> - Student Project</h2>
                     <hr>
-                    <a href="projects/2d-platformer.html">
+                    <a href="2d-platformer.html">
                         <img class="img-responsive img-border img-left" src="Assets/Images/Projects/2D-Platformer/jumping over enemy - level1.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Released September 2022</p>
                     <p>Navigate each carefully crafted level while fighting you way through enemies and jumping on platforms!</p>
-                    <a href="projects/2d-platformer.html" class="btn btn-default btn-lg">Read More</a>
+                    <a href="2d-platformer.html" class="btn btn-default btn-lg">Read More</a>
                 </div>
             </div>
         </div>
