--- a/red-knight.html
+++ b/red-knight.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Star Hunter - Sam Sherrod</title>
+    <title>Red Knight - Sam Sherrod</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -47,25 +47,25 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="../index.html">Sam Sherrod</a>
+                <a class="navbar-brand" href="index.html">Sam Sherrod</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="../index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="../about.html">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="../projects.html">Projects</a>
+                        <a href="projects.html">Projects</a>
                     </li>
                     <li>
-                        <a href="../contact.html">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="../Assets/Files/Resume.pdf" target="_blank">Resume</a>
+                        <a href="Assets/Files/Resume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -81,40 +81,44 @@
                 <div class="col-lg-12">
                     <hr>
                     <h2 class="intro-text text-center">
-                        <strong>Star Hunter</strong> - Bow and Arrow VR Project
+                        <strong>Red Knight</strong> - 2D Action Platformer
                     </h2>
                     <hr>
                     <p class="intro-text text-center">
-                        In Development - Expected Release March 2023</br />
-                        Student Solo Virtual Reality Project<br />
-                        <strong>Role: </strong> Solo Developer
+                        In Development - Expected Release March 2023<br />
+                        Student Group Games Development Project<br />
+                        <strong>Role: </strong> Lead Developer
                     </p> 
-                    <a href="../Assets/Images/Projects/Star Hunter/star-hunter-prototype-img.jpg">
-                        <img class="img-responsive img-border img-left" src="../Assets/Images/Projects/Star Hunter/star-hunter-prototype-img.jpg" alt="">
+                    <a href="Assets/Images/Projects/Red Knight/red-knight-prototype-img.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Red Knight/red-knight-prototype-img.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
 
-                    <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.
-                        When all of the stars are connected, an image will be shown, and the next set of stars will be displayed in the sky. 
-                        It is currently in development built soley by myself. I'm very interested in the field of virtual reality, and have
-                        thoroughly enjoyed working on this project. It is made in the Unity game engine using Unity's XR Toolkit, and is tested
-                        for the Meta Quest 2.</p>
-                    <p>This is a solo project made for University of London's Virtual Reality  class. The game will be finished and 
-                        playable on Windows, Mac, WebGL, and the Meta Quest 2 in March 2023.</p>
-                    <p>Features of the game include:</p>
-                    <ul>
-                        <li>a working virtual bow and arrow with precise aiming</li>
-                        <li>virtual hands that move and animate with the player's hands</li>
-                        <li>bow is attached to the front of the body, and the arrows are in a quiver attached to the back of the player</li>
-                        <li>customizable menu options including the ability to toggle moving with the joystick or teleport, adjusting the height
-                            and size of the player's virtual body</li>
-                        <li>a virtual menu</li>
-                        <li>unlimited arrows</li>
-                        <li>a large open area of grass to move around in</li>
-                        <li>a nightime sky</li>
-                    </ul>
-                    <a href="https://github.com/samsherrod/Star-Hunter" target="_blank" class="btn btn-default btn-lg">View Source Code</a>
+                    <p>Red Knight is a 2D action platformer centered around a vampire hunter seeking revenge against Dracula.
+                        It is currently in development being built by myself and 3 other students with the Unity game engine.
+                         It is inspired by games such as Megaman and Enter the Gungeon. A unique aspect of the it is that it 
+                         is both a 2D action platformer and a top down action game similar to Zelda II: The Adventure of Link.
+                    </p>
+                    <p>This is a group project made for University of London's Game Development class. The game will be finished 
+                         and playable on WebGL in March 2023.</p>
+                    <p>I have more experience with Unity than the rest of my team, and my role in the development phase has mainly
+                        been to support the team. This has included:
+                        <ul>
+                            <li>building persisting scripts including a game manager, an input manager, and a UI manager</li>
+                            <li>creating a tilemap system with rule tiles for teammates to quickly prototype new levels in
+                                a flexible way</li>
+                            <li>designing game mechanics</li>
+                            <li>setting up the controls using Unity's new Input System</li>
+                            <li>setting up animation state machine</li>
+                            <li>creating our GitHub repository</li>
+                            <li>managing all of our files including our GDD, references, weekly tasks lists, features and more on
+                                 our Google Drive.</li>
+                        </ul>
+                    </p>
+
+                    <a href="https://samsherrod.itch.io/red-knight" target="_blank" class="btn btn-default btn-lg">Play Game</a>
+                    <a href="https://github.com/samsherrod/red-knight-V2" target="_blank" class="btn btn-default btn-lg">View Source Code</a>
                     
                     <p>Keep in mind that this project is in development, and this is not a reflection of the final or completed project.</p>
                 </div>
