--- a/2d-platformer.html
+++ b/2d-platformer.html
@@ -112,6 +112,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <!-- /.container -->
+    
     <footer>
         <div class="container">
             <div class="row">
