--- a/average-face.html
+++ b/average-face.html
@@ -115,6 +115,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <!-- /.container -->
+
     <footer>
         <div class="container">
             <div class="row">
