--- a/instagram-filter.html
+++ b/instagram-filter.html
@@ -138,6 +138,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <!-- /.container -->
+
     <footer>
         <div class="container">
             <div class="row">
