--- a/red-knight.html
+++ b/red-knight.html
@@ -124,6 +124,10 @@
                 </div>
             </div>
         </div>
+    </div>
+    <!-- /.container -->
+
+    
     <footer>
         <div class="container">
             <div class="row">
