--- a/star-hunter.html
+++ b/star-hunter.html
@@ -120,6 +120,10 @@
                 </div>
             </div>
         </div>
+    </div>
+    <!-- /.container -->
+
+    
     <footer>
         <div class="container">
             <div class="row">
