--- a/2d-platformer.html
+++ b/2d-platformer.html
@@ -113,6 +113,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <!-- /.container -->
+    
     <footer>
         <div class="container">
             <div class="row">
