changed star hunter imgs

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                         <strong>Star Hunter</strong> - Bow and Arrow VR Project
                     </h2>
                     <hr>
-                    <a href="Assets/Images/Projects/Star Hunter/star-hunter-prototype-img.jpg">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/star-hunter-prototype-img.jpg" alt="">
+                    <a href="Assets/Images/Projects/Star Hunter/Star Hunter 2.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/Star Hunter 2.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>Star Hunter is a casual VR game where you can shoot stars with a bow and arrow to connect them like in Connect The Dots.</p>
