--- a/star-hunter.html
+++ b/star-hunter.html
@@ -89,8 +89,17 @@
                         Student Solo Virtual Reality Project<br />
                         <strong>Role: </strong> Solo Developer
                     </p> 
-                    <a href="Assets/Images/Projects/Star Hunter/star-hunter-prototype-img.jpg">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/star-hunter-prototype-img.jpg" alt="">
+                    <a href="Assets/Images/Projects/Star Hunter/Star Hunter 1.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/Star Hunter 1.png" alt="">
+                    </a>
+                    <a href="Assets/Images/Projects/Star Hunter/Star Hunter 2.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/Star Hunter 2.png" alt="">
+                    </a>
+                    <a href="Assets/Images/Projects/Star Hunter/Star Hunter 3.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/Star Hunter 3.png" alt="">
+                    </a>
+                    <a href="Assets/Images/Projects/Star Hunter/Star Hunter 4.png">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/Star Hunter 4.png" alt="">
                     </a>
 
                     <hr class="visible-xs">
