--- a/2d-platformer.html
+++ b/2d-platformer.html
@@ -96,7 +96,7 @@
 
                     <hr class="visible-xs">
 
-                    <p>This is a 2D platformer game where you navigate each carefully crafted level while fighting your way through 
+                    <p>This is a 2D platformer game where you have to navigate each carefully crafted level while fighting your way through 
                           enemies and jumping on platforms. It was inspired by traditional platformer games such as Mario, and the Legend
                          of Zelda for its health system. It is fully responsive scaling with different screen sizes, and incorporates 
                          aspects such as raycasting, animation, scene management, input and movement controls, player knockbacks, and enemies
@@ -107,15 +107,33 @@
                     <p>Over 2 months, I researched and programmed everything from scratch in Phaser.js, Tiled, and built and deployed it onto
                         GitHub through NPM. At the time, I had never worked with any of these projects before, and it was a great learning 
                         experience.</p>
-                    <a href="https://samsherrod.github.io/2D-Platformer/website/" target="_blank" class="btn btn-default btn-lg">Play Game</a>
+                    
+                    <p><strong>Technologies used:</strong>
+                        <ul>
+                            <li>JavaScript</li>
+                            <li>Phaser 3.50.0</li>
+                            <li>Tiled 1.8.5</li>
+                            <li>Node 16.15.1</li>
+                            <li>Art assets from Itch.io</li>
+                        </ul>
+                    </p>
+
+                        <a href="https://samsherrod.github.io/2D-Platformer/website/" target="_blank" class="btn btn-default btn-lg">Play Game Online</a>
                     <a href="https://github.com/samsherrod/2D-Platformer" target="_blank" class="btn btn-default btn-lg">View Source Code</a>
+
+                    <p><strong>Computer Controls:</strong></p>
+                        <ul>
+                            <li>Use the arrows keys to move left and right</li>
+                            <li>Use the spacebar or the up arrow key to jump</li>
+                            <li>Use the Z key to maximize screen</li>
+                        </ul>
 
                 </div>
             </div>
         </div>
     </div>
     <!-- /.container -->
-    
+
     <footer>
         <div class="container">
             <div class="row">
