--- a/average-face.html
+++ b/average-face.html
@@ -108,7 +108,15 @@
                     <p> This is an image processing tool that allows you to blend multiple photos of faces together. Adjust the slider to see.</p>
                     <p>This is a tool I made for a graphics programming course at the University of London using p5.js from scratch.</p>
 
-                    <a href="https://samsherrod.itch.io/average-face-filter" target="_blank" class="btn btn-default btn-lg">Try Tool</a>
+                    <p><strong>Technologies used:</strong>
+                        <ul>
+                            <li>JavaScript</li>
+                            <li>p5.js</li>
+                            <li>Images provided by UoL</li>
+                        </ul>
+                    </p>
+
+                    <a href="https://samsherrod.itch.io/average-face-filter" target="_blank" class="btn btn-default btn-lg">Try Tool Online</a>
                     
                     <p><strong>Note:</strong> For this particular university project, I am unable to show my code to the public due to plagiarism
                         concerns. If you would like to see the code for this, please <a href="contact.html"><strong>contact</strong></a> me.</p>
