--- a/instagram-filter.html
+++ b/instagram-filter.html
@@ -131,7 +131,16 @@
                           blue, and alpha values when blur is turned on. I like turning on the
                           edge detect filter, and having red 1, green 2, blue 3 for instance</li>
                     </ul>
-                    <a href="https://samsherrod.itch.io/instagram-filter" target="_blank" class="btn btn-default btn-lg">Try Tool</a>
+
+                    <p><strong>Technologies used:</strong>
+                        <ul>
+                            <li>JavaScript</li>
+                            <li>p5.js</li>
+                            <li>Image provided by UoL</li>
+                        </ul>
+                    </p>
+
+                    <a href="https://samsherrod.itch.io/instagram-filter" target="_blank" class="btn btn-default btn-lg">Try Tool Online</a>
 
                     <p><strong>Note:</strong> For this particular university project, I am unable to show my code to the public due to plagiarism
                         concerns. If you would like to see the code for this, please <a href="contact.html"><strong>contact</strong></a> me.</p>
