--- a/red-knight.html
+++ b/red-knight.html
@@ -117,10 +117,19 @@
                         </ul>
                     </p>
 
-                    <a href="https://samsherrod.itch.io/red-knight" target="_blank" class="btn btn-default btn-lg">Play Game</a>
+                    <p><strong>Technologies used:</strong>
+                        <ul>
+                            <li>C#</li>
+                            <li>Unity 2019.4.40f1</li>
+                            <li>Various art and sound assets from Unity Asset Store and Itch.io</li>
+                            <li>Google Drive for private collaboration</li>
+                        </ul>
+                    </p>
+
+                    <a href="https://samsherrod.itch.io/red-knight" target="_blank" class="btn btn-default btn-lg">Play Game Online</a>
                     <a href="https://github.com/samsherrod/red-knight-V2" target="_blank" class="btn btn-default btn-lg">View Source Code</a>
                     
-                    <p>Keep in mind that this project is in development, and this is not a reflection of the final or completed project.</p>
+                    <p><strong>Keep in mind that this project is in development, and this is not a reflection of the final or completed project.</strong></p>
                 </div>
             </div>
         </div>
