--- a/star-hunter.html
+++ b/star-hunter.html
@@ -111,7 +111,7 @@
                         for the Meta Quest 2.</p>
                     <p>This is a solo project made for University of London's Virtual Reality  class. The game will be finished and 
                         playable on Windows, Mac, WebGL, and the Meta Quest 2 in March 2023.</p>
-                    <p>Features of the game include:</p>
+                    <p><strong>Game features</strong> will include:</p>
                     <ul>
                         <li>a working virtual bow and arrow with precise aiming</li>
                         <li>virtual hands that move and animate with the player's hands</li>
@@ -123,9 +123,22 @@
                         <li>a large open area of grass to move around in</li>
                         <li>a nightime sky</li>
                     </ul>
+
+                    <p><strong>Technologies used:</strong>
+                    <ul>
+                        <li>C#</li>
+                        <li>Unity 2019.4.40f1</li>
+                        <li>Unity Package - XR Interaction Toolkit 0.9.4-preview</li>
+                        <li>Unity Package- Occulus XR Plugin 1.6.1</li>
+                        <li>Unity Package- XR Plugin Management 4.3.1</li>
+                        <li>Mesh for bow and arrow came from Steam VR</li>
+                        <li>Virtual hand models</li>
+                    </ul>
+                    </p>
+
                     <a href="https://github.com/samsherrod/Star-Hunter" target="_blank" class="btn btn-default btn-lg">View Source Code</a>
                     
-                    <p>Keep in mind that this project is in development, and this is not a reflection of the final or completed project.</p>
+                    <p><strong>Keep in mind that this project is in development, and this is not a reflection of the final or completed project.</strong></p>
                 </div>
             </div>
         </div>
