--- a/projects.html
+++ b/projects.html
@@ -101,7 +101,7 @@
                     <h2 class="intro-text text-center"> <strong>Star Hunter</strong> Bow and Arrow VR Project - Student Project</h2>
                     <hr>
                     <a href="star-hunter.html">
-                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/star-hunter-prototype-img.jpg" alt="">
+                        <img class="img-responsive img-border img-left" src="Assets/Images/Projects/Star Hunter/Star Hunter 2.png" alt="">
                     </a>
                     <hr class="visible-xs">
                     <p>In Development - Expected Release March 2023</p>
